# A-Perturbation-Semantics-View-of-Stability-in-k-Nearest-Neighbor-Classification

./: .gitignore  AGENTS.md  PROJECT_MAP.md  README.md  environment.yml  pyproject.toml
archive/: README.md
archive/notes/: jmlr_phase2_plan.md  jmlr_submission_upgrade_plan.md  修改意见.md  修改意见1.txt
assets/: st6gal1_axl_technical_route_README.md
data_tables/: jmlr_continuous_stress.csv  jmlr_diagnostic_runtime.csv  jmlr_exhaustive_minimality_map.csv  jmlr_margin_distribution.csv  jmlr_real_data_extended.csv  jmlr_repair_experiment.csv  synthetic_aggregates.csv  synthetic_benchmark.json  tabular_aggregates.csv  tabular_benchmark.json
docs/decisions/: DR-20260514-paper-claims.md  DR-20260514-paper-scope.md
docs/literature/: LIT_TABLE.md  RELATED_WORK_TABLE.md  novelty_assessment.md  refs_to_add.bib
docs/project-control/: 04_CLAUDE_DELEGATION_PROTOCOL.md  07_GIT_AND_ENVIRONMENT.md  NEXT_PHASE_PAPER_PLAN.md
experiments/: analyze_witnesses.py  certify_minimality.py  extract_ablation.py  generate_experiment_figures.py  generate_witness_figures.py  postprocess_tabular.py  run_all.py  search_minimal_1nn.py  search_tie_free.py  stability_gap_embedding.py  stability_gap_synthetic.py  stability_gap_tabular.py
outputs/: REPRODUCIBILITY.md  recreated_figures.html
outputs_manifest/: REPRODUCIBILITY.md  config.toml  run_manifest.json
paper/: main.tex  refs.bib
paper/sections/: 00_abstract.tex  (+26 more)
tasks/: TASK_INDEX.md
tests/: test_graph_metrics.py  test_jmlr_data_tables.py  test_knn.py  test_metrics.py  test_witnesses.py
tools/: run_claude_task.py  validate_repo.py
(+82 files in other folders)
