[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "knn-stability-calculus"
version = "0.1.0"
description = "Research code for stability calculus of local learning rules and k-nearest neighbors."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib",
    "networkx",
    "numpy",
    "pytest",
    "scikit-learn",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
